update image classification

--- a/MachineLearningDemo/Views/ImageClassification/Index.cshtml
+++ b/MachineLearningDemo/Views/ImageClassification/Index.cshtml
@@ -2,53 +2,60 @@
 @{
     ViewBag.Title = "Image Classification Page";
 }
+<div class="row">
+    <div class="col-12">
+        <section>
+            <h1>Image Classification</h1>
+        </section>
 
-<h1>Image Classification</h1>
-<hr />
-<h2>Model Training</h2>
-<div id="upload-container">
-    <form id="uploadTraining" enctype="multipart/form-data">
-        <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
-        <button id="upload-button" class="btn btn-secondary">Upload!</button>
-    </form>
-</div>
-<hr />
+        <ul class="tabs">
+            <li class="active">
+                <label>Training the Model</label>
+            </li>
+            <li>
+                <label>Consuming the Model</label>
+            </li>
+        </ul>
+        <ul class="tabs--content">
+            <li class="tab--content">
+                <h2>Model Training</h2>
+                <div id="upload-container">
+                    <form id="uploadTraining" enctype="multipart/form-data">
+                        <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
+                        <button id="upload-button" class="btn btn-secondary">Upload!</button>
+                    </form>
+                </div>
+            </li>
+            <li class="tab--content">
+                <form id="uploadImage" enctype="multipart/form-data">
+                    <input type="hidden" id="trainResult" />
+                    <div style="display:inline-block;">
+                        <h2>Please uploa vaild Document</h2>
+                        <div style="width:500px; height:250px; border-radius: 4px; border: 1px silver solid;" id="divImageMediaPreview">
+                            <img src="~/assets/images/postcard.png" id="imgCard" style="width:498px; height:248px;" />
 
-@using (Html.BeginForm("Index", "ImageClassification", FormMethod.Post,
-                      new { enctype = "multipart/form-data" }))
-{
-    <input type="hidden" id="trainResult" />
-    <div style="display:inline-block;">
-        <h2>Please uploa vaild Document</h2>
-        <div style="width:500px; height:250px; border-radius: 4px; border: 1px silver solid;" id="divImageMediaPreview">
-            <img src="~/@(!string.IsNullOrEmpty(Model.ImagePath) ? Model.ImagePath : "assets/images/postcard.png")" style="width:498px; height:248px;" />
 
+                        </div>
+                        <div style="margin: 10px 0;">
+                            <input type="file" class="btn" name="formFile" id="formFile" style="display:inline-block;width: 370px;" />
+                            <input type="submit" class="btn btn-info" style="display:inline-block" value="Verify Image" />
+                        </div>
 
-        </div>
-        <div style="margin: 10px 0;">
-            <input type="file" class="btn" name="formFile" id="formFile" style="display:inline-block;width: 370px;" />
-            <input type="submit" class="btn btn-info" style="display:inline-block" value="Verify Image" />
-        </div>
-
+                    </div>
+                    <div class="error">
+                        <h3>Document Not Valid</h3>
+                    </div>
+                    <div class="result">
+                            <h3>Document Predicted As</h3>
+                            <h1 id="predicted"></h1>
+                            <h3>Score</h3>
+                            <h1 id="score"></h1>
+                    </div>
+                </form>
+            </li>
+        </ul>
     </div>
-    @if (!string.IsNullOrEmpty(Model.Predicted))
-    {
-        <div class="result">
-            @if (Model.Predicted.Contains("wrong"))
-            {
-                <h3>Document Not Valid</h3>
-            }
-            else
-            {
-                <h3>Document Predicted As</h3>
-                <h1>@(Model.Predicted.Contains("passport") ? "Passport" : "Emirates ID")</h1>
-                <h3>Score</h3>
-                <h1>@((Model.Score * 100).ToString("##")) %</h1>
-            }
-
-        </div>
-    }
-}
+</div>
 <style>
     .result h1 {
         margin: 10px 0;
@@ -64,11 +71,22 @@
         width: 50%;
         padding: 55px 50px;
     }
+    .error, .result {
+        display: none
+    }
 </style>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial-Classification");}
 }
+
+
+
+
+
+
+
+
+
 
 @*<div class="row">
         <div class="col-md-4">
