--- a/MachineLearningDemo/Views/ImageClassification/Index.cshtml
+++ b/MachineLearningDemo/Views/ImageClassification/Index.cshtml
@@ -30,9 +30,9 @@
                 <form id="uploadImage" enctype="multipart/form-data">
                     <input type="hidden" id="trainResult" />
                     <div style="display:inline-block;">
-                        <h2>Please uploa vaild Document</h2>
+                        <h2>Please upload vaild document</h2>
                         <div style="width:500px; height:250px; border-radius: 4px; border: 1px silver solid;" id="divImageMediaPreview">
-                            <img src="~/assets/images/postcard.png" id="imgCard" style="width:498px; height:248px;" />
+                            <img src="~/images/postcard.png" id="imgCard" style="width:498px; height:248px;" />
 
 
                         </div>
@@ -43,7 +43,7 @@
 
                     </div>
                     <div class="error">
-                        <h3>Document Not Valid</h3>
+                        <h3>Document not valid</h3>
                     </div>
                     <div class="result">
                             <h3>Document Predicted As</h3>
