--- a/CustomerSegmentation/Pages/Index.cshtml
+++ b/CustomerSegmentation/Pages/Index.cshtml
@@ -76,7 +76,8 @@
                     <div class="col-md-4">
                         <form method="post" action="" enctype="multipart/form-data">
                             <input type="file" name="file" class="form-control" id="fileUpload" style="padding: 3px" /><br />
-                            <input type="submit" class="btn btn-primary" name="predict" value="Predict data" />
+                            <input type="submit" class="btn btn-primary" name="predict" value="Predict data" /><br />
+                            <input type="submit" style="margin-top:20px;" class="btn btn-primary" name="download" value="Download data" />
                         </form>
                         
                     </div>
